--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,9 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
+    "express-session": "^1.18.1",
+    "passport": "^0.7.0",
+    "passport-steam": "^1.0.18",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
