--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^17.0.1",
     "express-session": "^1.18.1",
     "passport": "^0.7.0",
     "passport-steam": "^1.0.18",
