--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "ansi-styles": "^4.3.0",
     "asynckit": "^0.4.0",
     "aws-ssl-profiles": "^1.1.2",
-    "axios": "^0.21.4",
+    "axios": "1.11.0",
     "body-parser": "^2.2.0",
     "bytes": "^3.1.2",
     "call-bind-apply-helpers": "^1.0.2",
@@ -123,7 +123,6 @@
     "yargs": "^17.1.1",
     "yargs-parser": "^20.2.9"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
