--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "content-disposition": "^1.0.0",
     "content-type": "^1.0.5",
     "cookie": "^0.7.2",
+    "cookie-session": "^2.1.1",
     "cookie-signature": "^1.2.2",
     "cors": "^2.8.5",
     "debug": "^4.4.1",
@@ -101,6 +102,7 @@
     "send": "^1.2.0",
     "seq-queue": "^0.0.5",
     "serve-static": "^2.2.0",
+    "session": "^0.1.0",
     "setprototypeof": "^1.2.0",
     "side-channel": "^1.1.0",
     "side-channel-list": "^1.0.0",
