--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "ansi-styles": "^4.3.0",
     "asynckit": "^0.4.0",
     "aws-ssl-profiles": "^1.1.2",
-    "axios": "^0.21.4",
+    "axios": "1.11.0",
     "body-parser": "^2.2.0",
     "bytes": "^3.1.2",
     "call-bind-apply-helpers": "^1.0.2",
@@ -21,6 +21,7 @@
     "content-disposition": "^1.0.0",
     "content-type": "^1.0.5",
     "cookie": "^0.7.2",
+    "cookie-session": "^2.1.1",
     "cookie-signature": "^1.2.2",
     "cors": "^2.8.5",
     "debug": "^4.4.1",
@@ -101,6 +102,7 @@
     "send": "^1.2.0",
     "seq-queue": "^0.0.5",
     "serve-static": "^2.2.0",
+    "session": "^0.1.0",
     "setprototypeof": "^1.2.0",
     "side-channel": "^1.1.0",
     "side-channel-list": "^1.0.0",
@@ -123,7 +125,6 @@
     "yargs": "^17.1.1",
     "yargs-parser": "^20.2.9"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
