--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://victorious-smile-production.up.railway.app/api/$1"
+      "destination": "https://mindfulmedia.up.railway.app/api/$1"
     }
   ]
 }
