--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "https://mindfulmedia-production-6737.up.railway.app/api/:path*"
+      "source": "/api/(.*)",
+      "destination": "https://mindfulmedia-production-6763.up.railway.app/api/$1"
     }
   ]
 }
