--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
+#root
+.idea
+package-lock.json
+package.json
+
+#frontend
 frontend/node_modules/
-# packages from npm installa and start
-./.idea
+
+#backend
 backend/node_modules/
 backend/admin/node_modules/
 backend/.env
