Fixed journals routes (#63)
* unassigned port

* changed vercel.json

* changed vercel.json

* fixed bottom routing

* fixed proxy port and edited trouble shooting

* Revert

* Revert

* Test

* Revert

* TEST

* installed mysql express

* installed mysql express

* Move vercel.json to the root

* Move vercel.json to the root

* ignore .idea
syntax bug in vercel.json

* increased time before timeout when creating mysql pool

* increased time before timeout when creating mysql pool

* Delete .idea directory

* Delete node_modules directory

* added check for error

* added check for error

* added check for error

* Final commit: implemented a persistent session store in the database so that railway can sleep when now it use

* syntax bug

* syntax bug

* Changed server.js to start faster now that it must cold start from sleep and improved logic to up start time

* Local Dev fixes

* Local Dev fixes

* Local Dev fixes

* Fixed DB leak
Destroy cookies on user signout

* Fixed DB leak

* Fixed DB leak

* removed frontend/.env and removed api relative pathing

* Don't serve static in dev

* bug

* Updated database to allow multiple platforms to be tied to a username and to hold game stats and achievements

* Overhauled gamepage to better match the UI and display time played

* Fixed bug where old cached cookies were being pushed

* Fixed bug where old cached cookies were being pushed

* Fixed bug where old cached cookies were being pushed

* syntax error

* syntax error

* rolling back

* rolling back

* rolling back

* fixed capsulelist to fit new scheme

* fixed capsulelist to fit new scheme

* bug

* bug

* fixed create user logic

* Update server.js

* added conditional to work in prod and dev

* Rewired journals to work with server

* Rewired journals to work with server

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
+#root
+.idea
+package-lock.json
+package.json
+/node_modules
+
+#frontend
 frontend/node_modules/
-# packages from npm installa and start
-./.idea
+
+#backend
 backend/node_modules/
 backend/admin/node_modules/
 backend/.env
