--- a/backend/package.json
+++ b/backend/package.json
@@ -1,137 +1,25 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "database.js",
+  "private": true,
+  "type": "module",
+  "main": "src/server.js",
+  "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
+  },
   "dependencies": {
-    "accepts": "^2.0.0",
-    "ansi-regex": "^5.0.1",
-    "ansi-styles": "^4.3.0",
-    "asynckit": "^0.4.0",
-    "aws-ssl-profiles": "^1.1.2",
     "axios": "1.11.0",
-    "body-parser": "^2.2.0",
-    "bytes": "^3.1.2",
-    "call-bind-apply-helpers": "^1.0.2",
-    "call-bound": "^1.0.4",
-    "cliui": "^7.0.4",
-    "color-convert": "^2.0.1",
-    "color-name": "^1.1.4",
-    "combined-stream": "^1.0.8",
-    "content-disposition": "^1.0.0",
-    "content-type": "^1.0.5",
-    "cookie": "^0.7.2",
-    "cookie-session": "^2.1.1",
-    "cookie-signature": "^1.2.2",
     "cors": "^2.8.5",
-    "debug": "^4.4.1",
-    "delayed-stream": "^1.0.0",
-    "denque": "^2.1.0",
-    "depd": "^2.0.0",
     "dotenv": "^17.2.0",
-    "dunder-proto": "^1.0.1",
-    "ee-first": "^1.1.1",
-    "emoji-regex": "^8.0.0",
-    "encodeurl": "^2.0.0",
-    "es-define-property": "^1.0.1",
-    "es-errors": "^1.3.0",
-    "es-object-atoms": "^1.1.1",
-    "es-set-tostringtag": "^2.1.0",
-    "escalade": "^3.2.0",
-    "escape-html": "^1.0.3",
-    "etag": "^1.8.1",
     "express": "^5.1.0",
     "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.2",
-    "finalhandler": "^2.1.0",
-    "follow-redirects": "^1.15.9",
-    "form-data": "^4.0.4",
-    "forwarded": "^0.2.0",
-    "fresh": "^2.0.0",
-    "function-bind": "^1.1.2",
-    "generate-function": "^2.3.1",
-    "get-caller-file": "^2.0.5",
-    "get-intrinsic": "^1.3.0",
-    "get-proto": "^1.0.1",
-    "gopd": "^1.2.0",
-    "has-symbols": "^1.1.0",
-    "has-tostringtag": "^1.0.2",
-    "hasown": "^2.0.2",
-    "http-errors": "^2.0.0",
-    "iconv-lite": "^0.6.3",
-    "inherits": "^2.0.4",
-    "ipaddr.js": "^1.9.1",
-    "is-fullwidth-code-point": "^3.0.0",
-    "is-promise": "^4.0.0",
-    "is-property": "^1.0.2",
-    "localtunnel": "^2.0.2",
-    "long": "^5.3.2",
-    "lru-cache": "^7.18.3",
-    "lru.min": "^1.1.2",
-    "math-intrinsics": "^1.1.0",
-    "media-typer": "^1.1.0",
-    "merge-descriptors": "^2.0.0",
-    "mime-db": "^1.54.0",
-    "mime-types": "^3.0.1",
-    "ms": "^2.1.3",
     "mysql2": "^3.14.3",
-    "named-placeholders": "^1.1.3",
-    "negotiator": "^1.0.0",
-    "object-assign": "^4.1.1",
-    "object-inspect": "^1.13.4",
-    "on-finished": "^2.4.1",
-    "on-headers": "^1.1.0",
-    "once": "^1.4.0",
-    "openid": "^2.0.13",
-    "openurl": "^1.1.1",
-    "parseurl": "^1.3.3",
     "passport": "^0.7.0",
-    "passport-steam": "^1.0.18",
-    "passport-strategy": "^1.0.0",
-    "path-to-regexp": "^8.2.0",
-    "pause": "^0.0.1",
-    "proxy-addr": "^2.0.7",
-    "proxy-from-env": "^1.1.0",
-    "qs": "^6.14.0",
-    "random-bytes": "^1.0.0",
-    "range-parser": "^1.2.1",
-    "raw-body": "^3.0.0",
-    "require-directory": "^2.1.1",
-    "router": "^2.2.0",
-    "safe-buffer": "^5.2.1",
-    "safer-buffer": "^2.1.2",
-    "send": "^1.2.0",
-    "seq-queue": "^0.0.5",
-    "serve-static": "^2.2.0",
-    "session": "^0.1.0",
-    "setprototypeof": "^1.2.0",
-    "side-channel": "^1.1.0",
-    "side-channel-list": "^1.0.0",
-    "side-channel-map": "^1.0.1",
-    "side-channel-weakmap": "^1.0.2",
-    "sqlstring": "^2.3.3",
-    "statuses": "^2.0.2",
-    "steam-web": "^0.4.0",
-    "string-width": "^4.2.3",
-    "strip-ansi": "^6.0.1",
-    "toidentifier": "^1.0.1",
-    "type-is": "^2.0.1",
-    "uid-safe": "^2.1.5",
-    "unpipe": "^1.0.0",
-    "utils-merge": "^1.0.1",
-    "vary": "^1.1.2",
-    "wrap-ansi": "^7.0.0",
-    "wrappy": "^1.0.2",
-    "y18n": "^5.0.8",
-    "yargs": "^17.1.1",
-    "yargs-parser": "^20.2.9"
+    "passport-steam": "^1.0.18"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "module"
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
